--- a/misc/test_masking.ipynb
+++ b/misc/test_masking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "31a65631",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "adab614a",
    "metadata": {},
    "outputs": [],
@@ -47,19 +47,19 @@
     "    assert pointcloud.shape[1] == 3, \"Pointcloud should be of shape (N, 3)\"\n",
     "\n",
     "    # center pointcloud into origin (z-axis too)\n",
-    "    centroid = np.mean(pointcloud, axis=0)\n",
-    "    pointcloud = pointcloud - centroid\n",
+    "    #centroid = np.mean(pointcloud, axis=0)\n",
+    "    #pointcloud = pointcloud - centroid\n",
     "    \n",
     "    # farthest distance to origin \n",
     "    # normalize to unit sphere \n",
     "    m = np.max(np.sqrt(np.sum(pointcloud ** 2, axis=1)))\n",
     "    pointcloud = pointcloud / m\n",
-    "    return pointcloud.astype(np.float32)"
+    "    return pointcloud"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "aad82239",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b99b70e1",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b73b6489",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
+   "id": "525435e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_kNN_patch_idxs(xyz, center_xyz, k):\n",
+    "    dists = torch.cdist(xyz, center_xyz)\n",
+    "\n",
+    "    _, knn_idxs = torch.topk(dists, k, largest=False, dim=0) # shape: (N points, 3)\n",
+    "\n",
+    "    return knn_idxs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "628efb6f",
    "metadata": {},
    "outputs": [],
@@ -155,9 +170,13 @@
     "        super().__init__()\n",
     "        self.num_points = num_points\n",
     "        self.data_file = Path('/share/projects/erasmus/hansend/thesis/data/pretraining/ssl_tree_pretraining_dataset.h5')\n",
+    "        self.idx_file = Path('/share/projects/erasmus/hansend/thesis/data/pretraining/ssl_tree_pretraining_dataset_subset_idx.csv')\n",
     "        \n",
-    "        with h5py.File(self.data_file, 'r') as f:\n",
-    "            self.len = f['data']['instance_xyz'].shape[0]\n",
+    "        with open(Path('/share/projects/erasmus/hansend/thesis/data/pretraining/ssl_tree_pretraining_dataset_subset_idx.csv'), 'r') as f: \n",
+    "            self.idx = f.readlines()[1:] # skip header\n",
+    "            self.idx = [int(i.strip()) for i in self.idx]\n",
+    "                \n",
+    "        self.len = len(self.idx) \n",
     "\n",
     "    def __len__(self):\n",
     "        return self.len \n",
@@ -166,13 +185,21 @@
     "        with h5py.File(self.data_file, 'r', swmr=True) as f: \n",
     "            instance_xyz = f['data']['instance_xyz'][idx] \n",
     "            instance_xyz = instance_xyz.reshape(-1, 3) # (N, 3) \n",
-    "            instance_nheights = f['data']['instance_nheights'][idx]\n",
+    "            #instance_nheights = f['data']['instance_nheights'][idx]\n",
     "            \n",
     "            # FPS supsampling to num_points\n",
     "            if instance_xyz.shape[0] > self.num_points:\n",
     "                instance_idxs = fpsample.bucket_fps_kdline_sampling(instance_xyz, self.num_points, h=3)\n",
     "                instance_xyz = instance_xyz[instance_idxs]\n",
-    "                instance_nheights = instance_nheights[instance_idxs]\n",
+    "                #instance_nheights = instance_nheights[instance_idxs]\n",
+    "\n",
+    "                # augmentations with jittering as it is not used here before \n",
+    "                # instance_xyz = rotate_pointcloud(instance_xyz)\n",
+    "                # instance_xyz = translate_pointcloud(instance_xyz)\n",
+    "                # instance_xyz = jitter_pointcloud(instance_xyz)\n",
+    "                # instance_xyz = flip_pointcloud(instance_xyz)\n",
+    "                instance_xyz = normalize_pointcloud(instance_xyz)\n",
+    "\n",
     "\n",
     "            # adding jittered points to num_points\n",
     "            elif instance_xyz.shape[0] < self.num_points: \n",
@@ -182,16 +209,21 @@
     "                jitter = np.clip(0.01 * np.random.randn(add_points_xyz.shape[0], add_points_xyz.shape[1]), -0.02, 0.02)\n",
     "                add_points_xyz += jitter\n",
     "                instance_xyz = np.concatenate((instance_xyz, add_points_xyz), axis=0)\n",
-    "                instance_nheights = np.concatenate((instance_nheights, instance_nheights[idxs] + jitter[:, 2]), axis=0) # add jitter to nheights \n",
+    "                #instance_nheights = np.concatenate((instance_nheights, instance_nheights[idxs] + jitter[:, 2]), axis=0) # add jitter to nheights \n",
+    "            \n",
+    "                # augmentations without jitter as it has beend done before to upsample to num_points \n",
+    "                # instance_xyz = rotate_pointcloud(instance_xyz)\n",
+    "                # instance_xyz = translate_pointcloud(instance_xyz)\n",
+    "                # instance_xyz = flip_pointcloud(instance_xyz)\n",
+    "                instance_xyz = normalize_pointcloud(instance_xyz)\n",
+    "        \n",
     "\n",
-    "        # to implement augmentation pipeline\n",
-    "\n",
-    "        return instance_xyz, instance_nheights\n"
+    "        return instance_xyz #, instance_nheights\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9c7e2580",
    "metadata": {},
    "outputs": [],
@@ -215,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "74f1b284",
    "metadata": {},
    "outputs": [],
@@ -233,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9a3e534c",
    "metadata": {},
    "outputs": [],
@@ -253,34 +285,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "id": "df0fd524",
    "metadata": {},
    "outputs": [],
    "source": [
     "ds = SingleTree_Pretrain(num_points=2048)\n",
-    "dl = DataLoader(ds, batch_size=8, shuffle=False, num_workers=4)\n",
-    "batch = next(iter(dl))"
+    "dl = DataLoader(ds, batch_size=8, shuffle=False, num_workers=4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "a643dc33",
+   "execution_count": 26,
+   "id": "1198d8ed",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch 0: torch.Size([8, 2048, 3])\n",
-      "Batch 1: torch.Size([8, 2048])\n"
+      "87 ms ± 2.43 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "for i in range(len(batch)):\n",
-    "    print(f\"Batch {i}: {batch[i].shape}\")"
+    "%%timeit \n",
+    "batch = next(iter(dl))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "3dc9d6c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = next(iter(dl))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a643dc33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in range(1, 4): \n",
+    "    batch = next(iter(dl))\n",
+    "    for i in range(batch.shape[0]): \n",
+    "        instance = batch[i]\n",
+    "        np.savetxt(f'../data/instance_{j}_{i}.txt', instance) \n",
+    "    "
    ]
   },
   {
@@ -290,10 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check instances viruatlly \n",
-    "for i in range(batch.shape[0]): \n",
-    "    instance = batch[i]\n",
-    "    np.savetxt(f'../data/instance_{i}.txt', instance) "
+    "# check instances viruatlly \n"
    ]
   },
   {
@@ -344,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87f6b76a",
+   "id": "db8b1086",
    "metadata": {},
    "source": []
   },
@@ -425,18 +477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "4ddb1766",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_kNN_patch_idxs(xyz, center_xyz, k):\n",
-    "    dists = torch.cdist(xyz, center_xyz)\n",
-    "\n",
-    "    _, knn_idxs = torch.topk(dists, k, largest=False, dim=0) # shape: (N points, 3)\n",
-    "\n",
-    "    return knn_idxs"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -653,16 +698,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "9030654e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "masked_batch = center_split_masking(batch[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 181,
    "id": "b0a1a8d5",
    "metadata": {},
@@ -679,14 +714,6 @@
     "%%timeit \n",
     "masked_batch = center_split_masking(batch[0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3b9253a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
