--- a/misc/impl_branch_clustering.ipynb
+++ b/misc/impl_branch_clustering.ipynb
@@ -450,407 +450,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c8034819",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'num_clusters' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# get all clusters \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m clusters_xyz \u001b[38;5;241m=\u001b[39m [sample[c_idx \u001b[38;5;241m==\u001b[39m i][:, :\u001b[38;5;241m3\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[43mnum_clusters\u001b[49m)]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'num_clusters' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# get all clusters \n",
-    "clusters_xyz = [sample[c_idx == i][:, :3] for i in range(num_clusters)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "cc89334c",
+   "execution_count": 72,
+   "id": "50164315",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compute distances between centroids \n",
-    "distance_matrix = torch.cdist(c_centroids, c_centroids)\n",
-    "distance_matrix = distance_matrix.fill_diagonal_(float('inf'))\n",
-    "tril_indices = torch.tril_indices(distance_matrix.size(0), distance_matrix.size(1), offset=-1)\n",
-    "distances = distance_matrix[tril_indices[0], tril_indices[1]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "37f3a8da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sorted_distances, sorted_indices = torch.sort(distances)\n",
-    "pairs = torch.stack((tril_indices[0][sorted_indices], tril_indices[1][sorted_indices]), dim=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "7b6974fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c_centroids = c_centroids.cuda()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "3fded1a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# normalize clusters \n",
-    "clusters_xyz = [c - c_centroids[i] for i, c in enumerate(clusters_xyz)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "dc611ecb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for each cluster in clusters_xyz, compute the PCA\n",
-    "cov_matrices = [torch.cov(cluster.T) for cluster in clusters_xyz]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "60ba5109",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eigen = [torch.linalg.eigh(cov_matrix) for cov_matrix in cov_matrices]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "d2b99158",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eigen_idx = [torch.argsort(eigen[i].eigenvalues, descending=True) for i in range(num_clusters)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "a2c1cfd3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eigenvalues_sorted = [eigen[i].eigenvalues[eigen_idx[i]] for i in range(num_clusters)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "66f3bd32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eigenvectors_sorted = [eigen[i].eigenvectors[:, eigen_idx[i]] for i in range(num_clusters)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3bec8e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to get normal, direction "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "d02702ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eigenvalues_sorted, eigenvectors_sorted = [], []\n",
+    "def sort_pairs_distance_angle(pairs, distances, angles):\n",
+    "    # Sort by distance + small weight on angle\n",
+    "    sort_metric = distances + 1e-2 * angles\n",
+    "    sorted_indices = torch.argsort(sort_metric)\n",
+    "    sorted_pairs = pairs[sorted_indices]\n",
+    "    return sorted_pairs\n",
     "\n",
-    "for cov in cov_matrices:\n",
-    "    vals, vecs = torch.linalg.eigh(cov)\n",
-    "    idx = torch.argsort(vals, descending=True)\n",
-    "    eigenvalues_sorted.append(vals[idx])\n",
-    "    eigenvectors_sorted.append(vecs[:, idx])"
+    "# get all angles per pair \n",
+    "angles = torch.tensor([pairs_angle(clusters[pair[0]], clusters[pair[1]]) for pair in pairs], dtype=torch.float32).to(device)\n",
+    "# Ensure distances is on the same device as angles\n",
+    "distances = distances.to(device)\n",
+    "sorted_pairs = sort_pairs_distance_angle(pairs, distances, angles)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "ff170948",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# extract normals of the cluster -> the second eigenvector \n",
-    "direct_vectors = [eigenvectors_sorted[i][:, 0] for i in range(num_clusters)]\n",
-    "normals = [eigenvectors_sorted[i][:, 1] for i in range(num_clusters)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "id": "4f09e3e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# calculate the angle between the best-fit planes of each pair of clusters \n",
-    "angles = [] \n",
-    "for i in range(len(pairs)):\n",
-    "    idx1, idx2 = pairs[i, 0], pairs[i, 1]\n",
-    "    normal1 = normals[idx1]\n",
-    "    normal2 = normals[idx2]\n",
-    "    angle = torch.acos(torch.dot(normal1, normal2) / (torch.norm(normal1) * torch.norm(normal2)))\n",
-    "    angles.append(angle.item())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "d8887100",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1466842/1225822824.py:1: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  angles = torch.tensor(angles)\n"
-     ]
-    }
-   ],
-   "source": [
-    "angles = torch.tensor(angles)\n",
-    "angles_sorted, angles_indices = torch.sort(angles, descending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "id": "25b12b16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_residuals(clusters_xyz, c_centroids, normals):\n",
-    "    \"\"\"\n",
-    "    Calculate the residuals for each cluster based on the distance from points to the plane defined by the centroid and normal.\n",
-    "    \"\"\"\n",
-    "    residuals = []\n",
-    "    for i in range(num_clusters):\n",
-    "        cluster = clusters_xyz[i]\n",
-    "        centroid = c_centroids[i]\n",
-    "        normal = normals[i]\n",
-    "        # calculate the distance from each point in the cluster to the plane defined by the centroid and normal\n",
-    "        vec = cluster - centroid \n",
-    "        normal = normal / torch.norm(normal) \n",
-    "        distances = torch.abs(torch.matmul(vec, normal))\n",
-    "        residual = torch.sum(distances)\n",
-    "        residuals.append(residual.item())\n",
-    "    return torch.tensor(residuals) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "id": "a0d9c7ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res_prior = calculate_residuals(clusters_xyz, c_centroids, normals)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "id": "db04bdc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# function to merge pairs of clusters \n",
-    "def merge_clusters(clusters_xyz, pairs): \n",
-    "    \"\"\"\n",
-    "    Merge clusters based on the pairs provided.\n",
-    "    \"\"\"\n",
-    "    merged_clusters = []\n",
-    "    for i in range(len(pairs)):\n",
-    "        idx1, idx2 = pairs[i, 0], pairs[i, 1]\n",
-    "        # Concatenate the clusters along the first dimension\n",
-    "        merged_cluster = torch.cat([clusters_xyz[idx1], clusters_xyz[idx2]], dim=0)\n",
-    "        merged_clusters.append(merged_cluster)\n",
-    "    \n",
-    "    return merged_clusters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "id": "ffdd0b0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_pairs = merge_clusters(clusters_xyz, pairs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "id": "ac43bdf4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "post_merge_centroids = torch.stack([torch.mean(cluster, dim=0) for cluster in merged_pairs])    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8510608",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "post_merge_normals = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "id": "eb449ae2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# paris \n",
-    "cluster_pairs_idx = sorted_cluster_pairs[:, 0:2].int()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "id": "65886028",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pair_idx = cluster_pairs_idx[0, :2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "id": "10a4c2bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "normal_x = normals[pair_idx[0]]\n",
-    "normal_y = normals[pair_idx[1]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "id": "1a687c13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_angle(normal_x, normal_y): \n",
-    "    return torch.acos(torch.dot(normal_x, normal_y) / (torch.norm(normal_x) * torch.norm(normal_y)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "id": "13b08c28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_angles_per_pair(cluster_pairs_idx, normals): \n",
-    "    angles = [] \n",
-    "    for pair_idx in cluster_pairs_idx: \n",
-    "        normal_x = normals[pair_idx[0]]\n",
-    "        normal_y = normals[pair_idx[1]]\n",
-    "        angle = calculate_angle(normal_x, normal_y)\n",
-    "        angles.append(angle.item())\n",
-    "    angles = torch.tensor(angles, dtype=torch.float32)\n",
-    "    return angles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "id": "52012d3d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster_angles = calculate_angles_per_pair(cluster_pairs_idx, normals)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
-   "id": "2a7ee31d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster_angles_sorted_idx = torch.argsort(cluster_angles, descending=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab0c2d73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_threshold"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 178,
-   "id": "7ad14e4b",
+   "execution_count": 73,
+   "id": "ecd03ad6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([79, 57, 76,  6,  7, 10, 52, 72, 75,  5, 43, 44, 20, 19, 34, 35, 84, 85,\n",
-       "         4,  3, 49, 48, 80, 78, 62, 59, 58, 90,  9,  8, 83, 99, 71, 36, 37, 81,\n",
-       "        26, 27, 56, 55, 69, 15, 16, 86, 87, 91, 23, 17, 18, 64, 65, 66, 77, 39,\n",
-       "        38, 47, 42, 70, 88, 14, 74, 22, 21, 24, 68, 29, 30, 92, 93, 13, 96, 95,\n",
-       "        94, 97, 98, 25, 54, 53, 67, 50, 51,  2, 73, 40, 41, 33, 11, 12, 28, 89,\n",
-       "         1,  0, 32, 31, 45, 46, 60, 61, 82, 63])"
+       "tensor([[59, 21],\n",
+       "        [35, 33],\n",
+       "        [50, 21],\n",
+       "        ...,\n",
+       "        [27,  8],\n",
+       "        [27,  7],\n",
+       "        [49, 27]], device='cuda:0')"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cluster_angles_sorted_idx"
+    "sorted_pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "d67337d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_percen = [merged_residual_diff_percent(clusters[pair[0]], clusters[pair[1]]) for pair in sorted_pairs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "4c0d05d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_percent = torch.tensor(diff_percen, dtype=torch.float32).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "a0c8bbe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "below_threshold_indices = torch.nonzero(diff_percent < t, as_tuple=False).squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "60741f8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running k-means on cuda..\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[running kmeans]: 13it [00:00, 50.35it/s, center_shift=0.000000, iteration=13, tol=0.000100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# all the way stage one test \n",
+    "c_idx, c_centroids = initialize_clusters(sample, device, k=100)\n",
+    "clusters = get_clusters(sample, cl_idx)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e0684e7",
+   "id": "a97555ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running k-means on cuda..\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[running kmeans]: 0it [00:00, ?it/s, center_shift=10.314820, iteration=1, tol=0.000100]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[running kmeans]: 13it [00:00, 46.49it/s, center_shift=0.000068, iteration=13, tol=0.000100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c_idx, c_centroids = initialize_clusters(sample, device, k=100)\n",
+    "\n",
+    "clusters = get_clusters(sample, cl_idx)\n",
+    "pairs, distances = distance_pairs(c_centroids)\n",
+    "distances = distances.to(device)\n",
+    "angles = torch.tensor([pairs_angle(clusters[pair[0]], clusters[pair[1]]) for pair in pairs], dtype=torch.float32).to(device)\n",
+    "sorted_pairs = sort_pairs_distance_angle(pairs.to(device), distances, angles)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "5e14faa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get threshold \n",
+    "rdpercent = []\n",
+    "for i, (c1_idx, c2_idx) in enumerate(sorted_pairs):\n",
+    "    c1 = clusters[c1_idx]\n",
+    "    c2 = clusters[c2_idx]\n",
+    "    rdpercent.append(merged_residual_diff_percent(c1, c2))\n",
+    "rpercent = torch.tensor(rdpercent, dtype=torch.float32).to(device)\n",
+    "t = compute_threshold(rpercent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c226b7bc",
    "metadata": {},
    "outputs": [],
    "source": []
