--- a/misc/test_masking.ipynb
+++ b/misc/test_masking.ipynb
@@ -718,7 +718,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mae3d",
    "language": "python",
    "name": "python3"
   },
