--- a/misc/impl_branch_clustering.ipynb
+++ b/misc/impl_branch_clustering.ipynb
@@ -22,6 +22,28 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "bc7a12f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48180"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds = ALS_50K()\n",
+    "len(ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "8afa2c20",
    "metadata": {},
    "outputs": [],
@@ -29,6 +51,37 @@
     "# get sample \n",
     "ds = ALS_50K(num_points=2048)\n",
     "sample = ds[25542]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b78c26e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2048, 3)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1a2545e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt('sample.txt', sample[0], delimiter=',')"
    ]
   },
   {
