diverse files added

--- a/misc/quadrant_masking.ipynb
+++ b/misc/quadrant_masking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 2,
    "id": "778f05ca",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 4,
    "id": "bd86a44b",
    "metadata": {},
    "outputs": [],
@@ -38,8 +38,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e14f6324",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 5,
    "id": "db217685",
    "metadata": {},
    "outputs": [],
@@ -49,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 6,
    "id": "a6801d0a",
    "metadata": {},
    "outputs": [],
@@ -59,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 13,
    "id": "295e1764",
    "metadata": {},
    "outputs": [],
@@ -91,13 +97,37 @@
     "        select_idx = np.zeros(4, dtype=int)\n",
     "        select_idx[:2] = 1\n",
     "        np.random.shuffle(select_idx)\n",
-    "        masked_quads = [q for q, s in zip(quads, select_idx) if s == 1 and len(q) >= patch_size] # make sure there is at least 1 patch\n",
-    "        visible_quads = [q for q, s in zip(quads, select_idx) if s == 0 and len(q) >= patch_size]\n",
+    "        masked_quads = [q for q, s in zip(quads, select_idx) if s == 1] # make sure there is at least 1 patch\n",
+    "        visible_quads = [q for q, s in zip(quads, select_idx) if s == 0]\n",
+    "\n",
+    "        #  check if there are points in each quadrant\n",
+    "        masked_quads = [q for q in masked_quads if q.shape[0] > 0]\n",
+    "        visible_quads = [q for q in visible_quads if q.shape[0] > 0]\n",
+    "                        \n",
+    "\n",
+    "        # fall back to the largest quadrant if not enough points in one quadrant\n",
+    "        if len(masked_quads) == 1: # or sum([q.shape[0] for q in masked_quads]) < patch_size * (num_masked_patches):\n",
+    "            masked_quads = [torch.cat(masked_quads)]\n",
+    "\n",
+    "        if len(visible_quads) == 1: # or sum([q.shape[0] for q in visible_quads]) < patch_size * (num_vis_patches):\n",
+    "            visible_quads = [torch.cat(visible_quads)]\n",
+    "\n",
+    "\n",
+    "        # # Upsample quadrants if needed to ensure enough points for patching\n",
+    "        for idx, q in enumerate(masked_quads): \n",
+    "            to_add = patch_size - q.shape[0]\n",
+    "            if q.shape[0] > 0 and to_add > 0:\n",
+    "                dupl_idx = torch.randint(0, len(q), (to_add,), device=q.device)\n",
+    "                masked_quads[idx] = torch.cat((q, q[dupl_idx]), dim=0)\n",
+    "        for idx, q in enumerate(visible_quads):\n",
+    "            to_add = patch_size - q.shape[0]\n",
+    "            if q.shape[0] > 0 and to_add > 0:\n",
+    "                dupl_idx = torch.randint(0, len(q), (to_add,), device=q.device)\n",
+    "                visible_quads[idx] = torch.cat((q, q[dupl_idx]), dim=0)\n",
     "\n",
     "        # Distribute patches as evenly as possibel\n",
-    "        \n",
-    "        patches_per_masked = [num_masked_patches // 2 + (1 if x < num_masked_patches % 2 else 0) for x in range(2)]\n",
-    "        patches_per_visible = [num_vis_patches // 2 + (1 if x < num_vis_patches % 2 else 0) for x in range(2)] \n",
+    "        patches_per_masked = [num_masked_patches // len(masked_quads) + (1 if x < num_masked_patches % 2 else 0) for x in range(2)]\n",
+    "        patches_per_visible = [num_vis_patches // len(visible_quads) + (1 if x < num_vis_patches % 2 else 0) for x in range(2)] \n",
     "        \n",
     "        # get center points and patches masked\n",
     "        masked_centers = [] \n",
@@ -143,13 +173,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 14,
    "id": "24f8c4e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "mask_pos, vis_pos, mask_center_pos, vis_center_pos, mask_patch_idx, vis_patch_idx, shuffle_idx = quadrant_masking(batch.cuda(), masking_ratio=0.2, patch_size=16)\n",
     "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fb812d51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mask_pos: torch.Size([32, 25, 16, 3])\n",
+      "vis_pos: torch.Size([32, 103, 16, 3])\n",
+      " mask_center_pos: torch.Size([32, 25, 3])\n",
+      " vis_center_pos: torch.Size([32, 103, 3])\n",
+      " mask_patch_idx: torch.Size([25])\n",
+      " vis_patch_idx: torch.Size([103])\n",
+      " shuffle_idx: torch.Size([128])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    f'mask_pos: {mask_pos.shape}\\n'\n",
+    "    f'vis_pos: {vis_pos.shape}\\n',\n",
+    "    f'mask_center_pos: {mask_center_pos.shape}\\n',\n",
+    "    f'vis_center_pos: {vis_center_pos.shape}\\n',\n",
+    "    f'mask_patch_idx: {mask_patch_idx.shape}\\n',\n",
+    "    f'vis_patch_idx: {vis_patch_idx.shape}\\n',\n",
+    "    f'shuffle_idx: {shuffle_idx.shape}\\n'\n",
+    ")"
    ]
   },
   {
